--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,4 +1,7 @@
+arrowParens: 'avoid'
 singleQuote: true
-semi: false
-printWidth: 100
-trailingComma: none
+bracketSpacing: true
+endOfLine: 'lf'
+semi: true
+tabWidth: 2
+trailingComma: 'none'
